--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ header .logo
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="#" class="image featured"><img src="images/bridge-park.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/bridge park.jpg" alt="" /></a>
 										
 											<h3>Bridge Park</h3>
 									
